lab3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl
  labels:
    app: front-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: ifilyaninitmo/itdt-contained-frontend:master
        ports:
        - containerPort: 3000
