lab3/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: front
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: front
