lab3/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: front-example-tls
    hosts:
    - front.example.com
  rules:
  - host: front.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: front-service
            port:
              number: 8080
